--- a/src/app/components/Navbar/Navbar.css
+++ b/src/app/components/Navbar/Navbar.css
@@ -56,12 +56,12 @@
 }
 
 .nav-item {
-  height: 72px;
-  border-bottom: 10px solid transparent;
+  height: 79px;
+  /* border-bottom: 5px solid transparent; */
 }
 
 .nav-item:hover {
-  border-bottom: 2px solid #09bef0;
+  border-bottom: 3px solid #09bef0;
 }
 
 .nav-links {
