--- a/src/app/components/Navbar/Navbar.css
+++ b/src/app/components/Navbar/Navbar.css
@@ -6,7 +6,7 @@
 
 .navbar {
   background: #19191a;
-  height: 80px;
+  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,7 +19,7 @@
 .navbar-container {
   display: flex;
   justify-content: space-between;
-  height: 80px;
+  height: 60px;
 }
 
 .container {
@@ -56,8 +56,9 @@
 }
 
 .nav-item {
-  height: 79px;
-  /* border-bottom: 5px solid transparent; */
+  height: 59px;
+  /* margin-top: 10px; */
+  border-bottom: 5px solid transparent;
 }
 
 .nav-item:hover {
@@ -95,7 +96,7 @@
     flex-direction: column;
     width: 100%;
     position: absolute;
-    top: 80px;
+    top: 60px;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
@@ -111,7 +112,7 @@
 
   .nav-links {
     text-align: center;
-    padding: 2rem;
+    padding: 0.5rem;
     width: 100%;
     display: table;
   }
@@ -130,12 +131,12 @@
     width: 100%;
   }
 
-  .navbar-logo {
+  /* .navbar-logo {
     position: absolute;
     top: 0;
     left: 0;
     transform: translate(25%, 50%);
-  }
+  } */
 
   .menu-icon {
     display: block;
