--- a/src/app/components/Toolbar/Toolbar.css
+++ b/src/app/components/Toolbar/Toolbar.css
@@ -1,44 +1,31 @@
-* {
+/* * {
   box-sizing: border-box;
-}
+} */
 
 .toolbar {
   position: sticky;
   top: 60px;
   background-color: white;
   border: 1px solid black;
-  padding: 5px;
+  padding: 0.5rem;
   border-top: none;
   font-family: arial, sans-serif;
   width: 100%;
 }
 
-.toolbar__inputs {
+.toolbar__inputs-wrapper {
   display: flex;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   font-weight: bold;
-  padding: 6px;
+  padding: 0.5rem;
 }
 
-.toolbar__inputs > div {
-  box-sizing: border-box;
-  margin: auto;
-}
-
-.toolbar__buttons {
-}
-
-input[type=date], input[type=time] {
-  height: 100%;
-  padding: 3px;
-  border-radius:7px;
-}
-
-select {
-  height: 100%;
-  padding: 3px;
-  border-radius:7px;
-  border: 2px solid black;
+input.toolbar__dateTime, select.toolbar__select {
+    height: 100%;
+    padding: 0.05rem;
+    border-radius: 0.5rem;
+    border: 2px solid black;
 }
 
 .button {
