--- a/src/app/components/Navbar/Navbar.css
+++ b/src/app/components/Navbar/Navbar.css
@@ -25,11 +25,11 @@
 .container {
   z-index: 1;
   width: 100%;
-  /* max-width: 1300px; */
+   max-width: 1500px; 
   margin-right: auto;
   margin-left: auto;
-  padding-right: 50px;
-  padding-left: 50px;
+  padding-right: 10rem;
+  padding-left: 10rem;
 }
 
 .navbar-logo {
@@ -66,7 +66,7 @@
 }
 
 .nav-links {
-  color: #eeca00;
+  color: #ffb517;
   display: flex;
   align-items: center;
   text-decoration: none;
