--- a/public/global.css
+++ b/public/global.css
@@ -16,38 +16,39 @@
   border-top: none;
   font-family: arial, sans-serif;
   width: 100%;
+}
 
-  .toolbar__inputs-wrapper {
+.toolbar .toolbar__inputs-wrapper {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
     font-weight: bold;
     padding: 0.5rem;
+  }
 
-    .toolbar__date-time,
-    .toolbar__select {
+.toolbar .toolbar__inputs-wrapper .toolbar__date-time,
+    .toolbar .toolbar__inputs-wrapper .toolbar__select {
       height: 100%;
       padding: 0.05rem;
       border-radius: 0.5rem;
       border: 2px solid black;
     }
-  }
 
-  .toolbar__button {
+.toolbar .toolbar__button {
     background-color: #008cba;
     border: none;
     color: white;
     padding: 5px 11px;
     text-align: center;
+    -webkit-text-decoration: none;
     text-decoration: none;
     font-size: 16px;
     border-radius: 7px;
   }
 
-  .toolbar__button:hover {
+.toolbar .toolbar__button:hover {
     color: black;
   }
-}
 
 * {
   box-sizing: border-box;
@@ -87,6 +88,7 @@
   color: #fff;
   justify-self: start;
   cursor: pointer;
+  -webkit-text-decoration: none;
   text-decoration: none;
   font-size: 2rem;
   display: flex;
@@ -120,6 +122,7 @@
   color: #ffb517;
   display: flex;
   align-items: center;
+  -webkit-text-decoration: none;
   text-decoration: none;
   padding: 0.5rem 1rem;
   height: 100%;
@@ -200,9 +203,9 @@
   }
 }
 
-/* .telegrams-table {
+.telegrams-table {
   border-collapse: collapse;
-  margin: 25px 0;
+  margin: 0px 0;
   font-size: 0.9em;
   font-family: sans-serif;
   min-width: 400px;
@@ -210,63 +213,38 @@
   border-radius: 5px 5px 0 0;
   overflow: hidden;
 }
-.telegrams-table thead tr {
-  background-color: #ffb517;;
-  color: black;
-  text-align: left;
-}
 
-.telegrams-table th,
-.telegrams-table td {
-    padding: 12px 15px;
-}
-.telegrams-table tbody tr {
-  border-bottom: 1px solid #dddddd;
-}
-
-.telegrams-table tbody tr:nth-of-type(even) {
-  background-color: #f3f3f3;
-}
-
-.telegrams-table tbody tr:last-of-type {
-  border-bottom: 2px solid #ffb517;;
-}
-
-.telegrams-table tbody tr:hover {
-  font-weight: bold;
-  color: #ffb517;;
-} */
-
-.telegrams-table {
-  .telegrams__thead {
+.telegrams-table .telegrams__thead {
     background-color: #ffb517;
-    
-    th {
-      padding: 0.5rem;
-      text-align: left;
-      border: 1px solid black;
-    }
   }
 
-  .telegrams__tbody {
-    tr:nth-child(odd) {
-      background-color: #fafafa;
-    }
-
-    tr:nth-child(even) {
-      background-color: #e2eafd;
-    }
-
-    td {
+.telegrams-table .telegrams__thead th {
       padding: 0.5rem;
       text-align: left;
-      border: 1px solid #ddd;
     }
-    tr:hover {
+
+.telegrams-table .telegrams__tbody tr {
+      border-bottom: 1px solid #dddddd;
+    }
+
+.telegrams-table .telegrams__tbody tr:nth-child(even) {
+      background-color: #f3f3f3;
+    }
+
+.telegrams-table .telegrams__tbody tr:last-of-type {
+      border-bottom: 2px solid #ffb517;
+    }
+
+.telegrams-table .telegrams__tbody td {
+      padding: 0.5rem;
+      text-align: left;
+    }
+
+.telegrams-table .telegrams__tbody tr:hover {
       background-color: lightgrey;
     }
-    td:hover {
-      background-color: #ffb517;
+
+.telegrams-table .telegrams__tbody td:hover {
+      font-weight: bold;
+      color: #ffb517;
     }
-  }
-}
