--- a/src/app/plc-telegrams/Plc-telegrams.css
+++ b/src/app/plc-telegrams/Plc-telegrams.css
@@ -1,70 +1,47 @@
-/* .telegrams-table {
+.telegrams-table {
   border-collapse: collapse;
-  margin: 25px 0;
+  margin: 0px 0;
   font-size: 0.9em;
   font-family: sans-serif;
   min-width: 400px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
   border-radius: 5px 5px 0 0;
   overflow: hidden;
-}
-.telegrams-table thead tr {
-  background-color: #ffb517;;
-  color: black;
-  text-align: left;
-}
 
-.telegrams-table th,
-.telegrams-table td {
-    padding: 12px 15px;
-}
-.telegrams-table tbody tr {
-  border-bottom: 1px solid #dddddd;
-}
-
-.telegrams-table tbody tr:nth-of-type(even) {
-  background-color: #f3f3f3;
-}
-
-.telegrams-table tbody tr:last-of-type {
-  border-bottom: 2px solid #ffb517;;
-}
-
-.telegrams-table tbody tr:hover {
-  font-weight: bold;
-  color: #ffb517;;
-} */
-
-.telegrams-table {
   .telegrams__thead {
     background-color: #ffb517;
-    
+
     th {
       padding: 0.5rem;
       text-align: left;
-      border: 1px solid black;
     }
   }
 
   .telegrams__tbody {
-    tr:nth-child(odd) {
-      background-color: #fafafa;
+    tr {
+      border-bottom: 1px solid #dddddd;
     }
 
     tr:nth-child(even) {
-      background-color: #e2eafd;
+      background-color: #f3f3f3;
+    }
+
+    tr:last-of-type {
+      border-bottom: 2px solid #ffb517;
     }
 
     td {
       padding: 0.5rem;
       text-align: left;
-      border: 1px solid #ddd;
     }
+
     tr:hover {
       background-color: lightgrey;
     }
+
     td:hover {
-      background-color: #ffb517;
+      font-weight: bold;
+      color: #ffb517;
     }
   }
 }
